2011-11-02  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix RAIDZ(2) for >= 5 devices.

	* grub-core/fs/zfs/zfs.c (read_device): Fix length formula. Remove
	asize argument. All users updated.

2011-11-01  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix RAIDZ(2).

	* grub-core/fs/zfs/zfs.c (grub_zfs_device_desc): New member ashift.
	(fill_vdev_info_real): Set ashift.
	(read_device): Rewrite RAIDZ part based on reverse engineering.

2011-10-31  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/btrfs.c (grub_btrfs_extent_read): Add sanity check and
	don't report potentially unavialiable fields in debug output.
	(find_path): Fix double-free and memory leak.

2011-10-31  Vladimir Serbinenko  <phcoder@gmail.com>

	Read label on UFS1.

	* grub-core/fs/ufs.c (grub_ufs_label): Remove MODE_UFS2 condition.
	(grub_ufs_fs): Always set .label.

2011-10-31  Vladimir Serbinenko  <phcoder@gmail.com>

	Use shifts in UFS.

	* grub-core/fs/ufs.c (UFS_LOG_BLKSZ): New macro.
	(grub_ufs_data): New field log2_blksz.
	(grub_ufs_read_file): Use shifts.
	(grub_ufs_mount): Check block size and logarithm it.

2011-10-31  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/ufs.c (grub_ufs_lookup_symlink): Fix handling of
	long symlinks.

2011-10-30  Vladimir Serbinenko  <phcoder@gmail.com>

	Handle symlinks and long names on tar and cpio.

	* grub-core/fs/cpio.c (ATTR_TYPE): New definition.
	(ATTR_FILE): Likewise.
	(ATTR_DIR): Likewise.
	(ATTR_LNK): Likewise.
	(grub_cpio_data) [MODE_USTAR]: New fields linkname and linkname_alloc.
	(grub_cpio_find_file): Fill mode, handle linkname field as well as
	L and K entries.
	(grub_cpio_mount): Zero-fill data.
	(handle_symlink): New function.
	(grub_cpio_dir): Handle symlinks.
	(grub_cpio_open): Likewise.
	(grub_cpio_close) [MODE_USTAR]: Free linkname.

2011-10-30  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix iso9660 filename limitations and fix memory leaks.

	* grub-core/fs/iso9660.c (set_rockridge): Free sua at the end.