@@ -1,5 +1,10 @@
 2011-11-02  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/fs/zfs/zfs.c (read_device): Add ability to sustain a single
+	drive failure on both raidz and raidz2.
+
+2011-11-02  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	Fix RAIDZ(2) for >= 5 devices.
 
 	* grub-core/fs/zfs/zfs.c (read_device): Fix length formula. Remove
